--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,16 @@ asgiref==3.7.2
 cloudinary==1.36.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
-Django==3.2.22
+Django==4.2.6
+django-anymail==10.2
+django-ckeditor==6.7.0
+django-ckeditor-5==0.2.10
+django-crispy-forms==2.1
+django-js-asset==2.1.0
+django-mathfilters==1.0.0
+django-taggit==5.0.0
 gunicorn==21.2.0
+Pillow==10.1.0
 psycopg2==2.9.9
 pytz==2023.3.post1
 sqlparse==0.4.4
