--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-anymail==10.2
 django-ckeditor==6.7.0
 django-ckeditor-5==0.2.10
 django-crispy-forms==2.1
+django-jazzmin==2.6.0
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
 django-taggit==5.0.0
