--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-crispy-forms==2.1
 django-jazzmin==2.6.0
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
+django-summernote==0.8.20.0
 django-taggit==5.0.0
 gunicorn==21.2.0
 Pillow==10.1.0
