--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,21 @@ cloudinary==1.36.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.6
+django-allauth==0.58.1
 django-anymail==10.2
 django-ckeditor==6.7.0
 django-ckeditor-5==0.2.10
 django-crispy-forms==2.1
-django-jazzmin==2.6.0
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
 django-summernote==0.8.20.0
 django-taggit==5.0.0
 gunicorn==21.2.0
+oauthlib==3.2.2
 Pillow==10.1.0
 psycopg2==2.9.9
+PyJWT==2.8.0
+python3-openid==3.2.0
 pytz==2023.3.post1
+requests-oauthlib==1.3.1
 sqlparse==0.4.4
