--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ django-allauth==0.58.1
 django-anymail==10.2
 django-ckeditor==6.7.0
 django-ckeditor-5==0.2.10
-django-crispy-forms==2.1
+django-cors-headers==4.3.0
+django-crispy-forms==1.14.0
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
 django-summernote==0.8.20.0
