--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,15 @@ django-anymail==10.2
 django-ckeditor==6.7.0
 django-ckeditor-5==0.2.10
 django-cors-headers==4.3.0
-django-crispy-forms==1.14.0
+django-crispy-forms==1.12.0
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
+django-phonenumber-field==7.2.0
 django-summernote==0.8.20.0
 django-taggit==5.0.0
 gunicorn==21.2.0
 oauthlib==3.2.2
+phonenumbers==8.13.24
 Pillow==10.1.0
 psycopg2==2.9.9
 PyJWT==2.8.0
