--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 asgiref==3.7.2
+black==23.11.0
+click==8.1.7
 cloudinary==1.36.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==4.2.6
 django-allauth==0.58.1
 django-anymail==10.2
+django-bootstrap4==23.2
 django-ckeditor==6.7.0
 django-ckeditor-5==0.2.10
 django-cors-headers==4.3.0
 django-crispy-forms==1.12.0
+django-flatpickr==2.0.1
 django-js-asset==2.1.0
 django-mathfilters==1.0.0
 django-phonenumber-field==7.2.0
@@ -16,9 +20,11 @@ django-summernote==0.8.20.0
 django-taggit==5.0.0
 gunicorn==21.2.0
 oauthlib==3.2.2
+pathspec==0.11.2
 phonenumbers==8.13.24
 Pillow==10.1.0
 psycopg2==2.9.9
+pydantic==1.10.13
 PyJWT==2.8.0
 python3-openid==3.2.0
 pytz==2023.3.post1
