--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "flatpickr": "^4.6.13"
+    "@sweetalert2/theme-bootstrap-4": "^5.0.15",
+    "flatpickr": "^4.6.13",
+    "sweetalert2": "^11.10.1"
   }
 }
